assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Merriweather|Open+Sans:300');


html, body {
	font-family: 'Open Sans', sans-serif;
    height: 100vh;
    width: 100vw;
    margin: 0;
    overflow-x: hidden;
}

.navbar {
	font-family: 'Merriweather', sans-serif;
	text-transform: uppercase;
	font-weight: 300;
	font-size: .9rem;
	letter-spacing: .1rem;
	background: rgba(0, 0, 0, 0.7)!important;
}


.bg {
	position: relative;
	background-image: url('../images/landing-image.jpeg');
	background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    min-height: 700px;
    margin-bottom: 0 !important;
}

.jumbotron {
	border-radius: 0 !important;
	
}

.container {
	position: absolute;
	top: 38%;
}

.skills i {
	font-size: 4.5em;
	padding: 1rem;
}

#skills {
	padding-bottom: 2rem;
}

.skills {
	padding-bottom: 3rem;
}

h1 {
	font-family: 'Merriweather', sans-serif;
}

.padding {
	padding-bottom: 2rem;
}

.welcome {
	padding-top: 5rem;
}

.padding hr {
	border-top: 2px solid #b4b4b4;
	width: 65%;
	padding-bottom: 2rem;
}

#about {
	margin-bottom: 0;
	

}

#contact {
	height: 2vh;
}

#work {
	position: relative;
	background-image: url('../images/projects-bg.jpg');
	width: 100%;
	min-height: 620px;
	background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    line-height: 3;
}

#work h1 {
	color: white;
}

#work:after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: linear-gradient(to bottom left, white, black);
  opacity: 0.5;
}

.projects_content {
	position: relative;
	z-index: 20;
	background-color: transparent;
}

.card {
	background-color: transparent !important;
	color: white;
	border-color: 1px solid white;
}

#contact {
	padding-top: 5rem;
	background-color: white;
	height: 50vh;
}

.footer {
	margin-top: 5vh;
	height: 10vh;
	background: rgba(0, 0, 0, 0.7)!important;
	text-align: left;
	line-height: 4;
}

.animated {
	animation-duration: 0.5s;
}

